gccida/g0/operands_match_p
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/operands_match_p/src/reload.c:2537:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+2Ch] [rbp-14h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/operands_match_p/src/reload.c:2563:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/operands_match_p/src/reload.c:2565:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)); 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/operands_match_p/src/reload.c:2578:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( y->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/operands_match_p/src/reload.c:2580:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)y + 2)); 
  ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/operands_match_p/src/obj/reload.o] Error 1
